[gd_scene load_steps=9 format=3 uid="uid://dypmloxu02j7m"]

[ext_resource type="Texture2D" uid="uid://dprcsu4fjwmp" path="res://sprites/apple_standin.webp" id="1_afy8x"]
[ext_resource type="Texture2D" uid="uid://c3kesfgpn64y3" path="res://sprites/basket.png" id="2_k1na2"]
[ext_resource type="FontFile" uid="uid://cbcl2v0ygqviv" path="res://font/Kirsty Bd.otf" id="3_vdywr"]
[ext_resource type="FontFile" uid="uid://dn7ir11bv5loy" path="res://font/Kirsty Bd It.otf" id="4_k1na2"]
[ext_resource type="Script" uid="uid://tfivk1yqq2oh" path="res://button.gd" id="5_vdywr"]

[sub_resource type="Animation" id="Animation_l67vj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(571, 83)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Basket:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(570, 432)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Basket:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(209.5, 244.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../LoadText:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(405, -681.5)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../button:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(464, 503)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../LoadText:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Loading..."]
}

[sub_resource type="Animation" id="Animation_cdgt5"]
resource_name = "apple_fall"
length = 2.0
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(571, 83), Vector2(571, 218), Vector2(571, 463)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Basket:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.266667, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(570, 432), Vector2(570, 441)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Basket:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.266667, 0.3, 0.333333, 0.4, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0217537, -0.0541575, 0.0553342, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Label:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.466667, 0.566667, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 2,
"values": [Vector2(209.5, 244.5), Vector2(184.5, 244.5), Vector2(1177, 245)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../LoadText:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.733333, 0.866667, 0.866767, 0.866867, 0.933333, 1.63333, 1.66667, 1.73333, 1.86667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(405, -681.5), Vector2(405, 260), Vector2(405, 248), Vector2(405, 257), Vector2(405, 262), Vector2(405, 262), Vector2(405, 273), Vector2(405, 268), Vector2(405, -194)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../button:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.433333, 0.466667, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(464, 494), Vector2(464, 503), Vector2(464, 774)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../LoadText:text")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.56667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Loading...", "Done!"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_076lj"]
_data = {
&"RESET": SubResource("Animation_l67vj"),
&"apple_fall": SubResource("Animation_cdgt5")
}

[node name="start_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Start/AppleStandin")
libraries = {
&"": SubResource("AnimationLibrary_076lj")
}

[node name="Start" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="Start"]
offset_right = 1154.0
offset_bottom = 646.0
color = Color(0.672573, 0.696853, 0.620414, 1)

[node name="AppleStandin" type="Sprite2D" parent="Start"]
position = Vector2(571, 83)
scale = Vector2(0.388889, 0.388889)
texture = ExtResource("1_afy8x")

[node name="Basket" type="Sprite2D" parent="Start"]
position = Vector2(570, 432)
scale = Vector2(0.29, 0.29)
texture = ExtResource("2_k1na2")

[node name="Label" type="Label" parent="Start"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -366.5
offset_top = -79.5
offset_right = 366.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.443137)
theme_override_colors/font_outline_color = Color(0.842635, 3.56168e-06, 4.81307e-07, 1)
theme_override_constants/shadow_offset_x = 7
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 11
theme_override_constants/shadow_outline_size = 18
theme_override_fonts/font = ExtResource("3_vdywr")
theme_override_font_sizes/font_size = 100
text = "Apple Dropper!"

[node name="LoadText" type="Label" parent="Start"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.0
offset_top = -1005.5
offset_right = 171.0
offset_bottom = -914.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.7, 0.098, 0.098, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("4_k1na2")
theme_override_font_sizes/font_size = 75
text = "Loading..."
horizontal_alignment = 1

[node name="button" type="Button" parent="Start"]
offset_left = 464.0
offset_top = 503.0
offset_right = 679.0
offset_bottom = 580.0
theme_override_colors/icon_hover_pressed_color = Color(0.841429, 0.320898, 0.285513, 1)
theme_override_fonts/font = ExtResource("4_k1na2")
theme_override_font_sizes/font_size = 38
text = "Start!"
script = ExtResource("5_vdywr")

[connection signal="animation_finished" from="AnimationPlayer" to="Start/button" method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Start/button" to="Start/button" method="_on_pressed"]
